--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "formik": "^2.4.6",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.407.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-sweetalert2": "^0.6.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
